# Echo

./: .dockerignore  Dockerfile  LICENSE  README-EN.md  README.md  docker-compose.yml
backend/: main.py  pyproject.toml
backend/app/api/endpoints/: auth.py  echo_wall.py  time_capsules.py
backend/app/core/: auth.py  config.py  database.py
backend/app/schemas/: __init__.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/components/: Loading.vue  Toast.vue
frontend/src/config/: index.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  echoWall.ts  timeCapsule.ts
frontend/src/styles/: animations.css  main.css  variables.css
frontend/src/views/: CreateTimeCapsule.vue  EchoGallery.vue  EchoWall.vue  Home.vue  Login.vue  Profile.vue  Register.vue  TimeCapsuleDetail.vue  TimeCapsules.vue
